
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-53
2025-01-29 Mikhail Dubrovin
	- GenericCalibPars.py -	add stuff for debugging
        - src/NDArrIO.py - use load_txt with np.loadtxt, add stuff for debugging

Tag: V02-00-52
2024-11-25 Mikhail Dubrovin
	modified:   examples/testUtilsPSF.py np.float > np.float32
	modified:   src/NDArrIO.py np.int > np.int32

Tag: V02-00-51
2024-11-21 Mikhail Dubrovin
- GeometryAccess.py,
  UtilsConvertCrystFEL.py
  - np.float > np.float32, use /sdf path to test files

Tag: V02-00-50
2024-10-11 Mikhail Dubrovin
- src/GlobalUtils.py - change selection in det_type_from_source, add UNDEFDET
- src/UtilsPanelAlias.py - add methods id_det_formatted, alias_file_formatted

Tag: V02-00-49
2023-09-25 Mikhail Dubrovin
- src/GlobalUtils.py - replace deprecated np.bool > bool

Tag: V02-00-48
2023-09-13 Mikhail Dubrovin
- GlobalUtils.py - add method merge_masks_for_gain_index

Tag: V02-00-47
2023-05-19 Mikhail Dubrovin
- app/dcs - use optional uc.RepoManager(dirrepo=DIR_REPO,...

Tag: V02-00-46
2023-03-17 Mikhail Dubrovin
- rename pixel_status_extra > status_extra, pixel_datast > status_data
  - src/CalibPars.py
  - src/CalibParsStore.py
  - src/DCStore.py
  - src/GenericCalibPars.py
  - src/GlobalUtils.py

Tag: V02-00-45
2023-03-14 Mikhail Dubrovin
- src/CalibPars.py - add method pixel_status_extra, cosmetic improvements
- src/CalibParsStore.py - add nda = o.pixel_status_extra() in Usage
- src/DCStore.py - add o.add_ctype('pixel_status_extra')
- src/GenericCalibPars.py - add method pixel_status_extra, cosmetic improvements
- src/GlobalUtils.py - add PIXEL_STATUS_EXTRA

Tag: V02-00-44
2023-02-14 Mikhail Dubrovin
- src/GeometryAccess.py - add method convert_mask2d_to_ndarray

Tag: V02-00-43
2022-11-10 Mikhail Dubrovin